library/src/libqitemselectionmodel.h

typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionRange QItemSelectionRange;
typedef struct QModelIndex QModelIndex;
QTLIBC_API QItemSelection* QItemSelection_new(QModelIndex* topLeft, QModelIndex* bottomRight);
QTLIBC_API QItemSelection* QItemSelection_new2();
QTLIBC_API QItemSelection* QItemSelection_new3(QItemSelection* param1);
QTLIBC_API void QItemSelection_Select(QItemSelection* self, QModelIndex* topLeft, QModelIndex* bottomRight);
QTLIBC_API bool QItemSelection_Contains(const QItemSelection* self, QModelIndex* index);
QTLIBC_API libqt_list /* of QModelIndex* */ QItemSelection_Indexes(const QItemSelection* self);
QTLIBC_API void QItemSelection_Merge(QItemSelection* self, QItemSelection* other, int command);
QTLIBC_API void QItemSelection_Split(QItemSelectionRange* range, QItemSelectionRange* other, QItemSelection* result);
QTLIBC_API void QItemSelection_Delete(QItemSelection* self);