src/qt/libqitemselectionmodel.bf

extension CQt
{
	[LinkName("QItemSelection_new")]
	public static extern void* QItemSelection_new(void* topLeft, void* bottomRight);
	[LinkName("QItemSelection_new2")]
	public static extern void* QItemSelection_new2();
	[LinkName("QItemSelection_new3")]
	public static extern void* QItemSelection_new3(void* param1);
	[LinkName("QItemSelection_Select")]
	public static extern void QItemSelection_Select(void* c_this, void* topLeft, void* bottomRight);
	[LinkName("QItemSelection_Contains")]
	public static extern bool QItemSelection_Contains(void* c_this, void* index);
	[LinkName("QItemSelection_Indexes")]
	public static extern void[] QItemSelection_Indexes(void* c_this);
	[LinkName("QItemSelection_Merge")]
	public static extern void QItemSelection_Merge(void* c_this, void* other, int64 command);
	[LinkName("QItemSelection_Split")]
	public static extern void QItemSelection_Split(void* range, void* other, void* result);
	/// Delete this object from C++ memory
	[LinkName("QItemSelection_Delete")]
	public static extern void QItemSelection_Delete(void* self);
}